ALTP/y.output
Terminals unused in grammar

   tTAB
   tDOLLAR
   tSTRING


Rules useless in parser due to conflicts

   59 $@12: %empty


State 32 conflicts: 1 reduce/reduce
State 51 conflicts: 3 reduce/reduce
State 59 conflicts: 1 reduce/reduce
State 61 conflicts: 9 reduce/reduce


Grammar

    0 $accept: Main $end

    1 $@1: %empty

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body

    3 $@2: %empty

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody tFINSTR
    5             | %empty

    6 Params: Param NextParam
    7       | %empty

    8 NextParam: tVIRGULE Param
    9          | %empty

   10 Param: vartype tVAR
   11      | tVAR

   12 FuncBody: tACO FuncInstr tACC

   13 FuncInstrs: Instructions
   14           | RetVal

   15 FuncInstr: FuncInstrs FuncInstr
   16          | FuncInstrs
   17          | %empty

   18 RetVal: tRETURN tVAR tFINSTR

   19 Body: tACO Instruction tACC

   20 Instruction: Instructions Instruction
   21            | Instructions
   22            | %empty

   23 Instructions: Calcul
   24             | For
   25             | While
   26             | Print
   27             | Declaration
   28             | If
   29             | RetVal

   30 Declaration: vartype Declarations tFINSTR

   31 Declarations: Multideclaration Declarations
   32             | Lastdeclaration

   33 Multideclaration: tVAR tVIRGULE
   34                 | tVAR tEQUAL tINTNR tVIRGULE

   35 Lastdeclaration: tVAR
   36                | tVAR tEQUAL tINTNR

   37 vartype: tINT
   38        | tCONST

   39 Print: tPRINTF tPO tVAR tPC tFINSTR

   40 $@3: %empty

   41 $@4: %empty

   42 $@5: %empty

   43 If: tIF $@3 tPO Condition tPC $@4 Body $@5 Else

   44 Else: tELSE Body
   45     | %empty

   46 Condition: Expression tCHECKEQ Expression
   47          | Expression tLESS Expression
   48          | Expression tCHECKHIGHER Expression
   49          | Expression tLESSEQUAL Expression
   50          | Expression tMOREEQUAL Expression

   51 $@6: %empty

   52 $@7: %empty

   53 While: tWHILE $@6 tPO Condition tPC $@7 Body

   54 $@8: %empty

   55 $@9: %empty

   56 $@10: %empty

   57 $@11: %empty

   58 For: tFOR tPO $@8 DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body

   59 $@12: %empty

   60 $@13: %empty

   61 $@14: %empty

   62 $@15: %empty

   63 For: tFOR tPO $@12 DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

   64 DeclCalc: Declaration
   65         | Calcul

   66 Calcul: tVAR tEQUAL Expression tFINSTR
   67       | tVAR tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR tPLUSPLUS tFINSTR
   69       | tVAR tMINUSMINUS tFINSTR
   70       | tVAR tMINUSEQUAL Expression tFINSTR
   71       | tVAR tPLUSEQUAL Expression tFINSTR

   72 Expression: Expression tADD Expression
   73           | Expression tSUBTRACT Expression
   74           | Expression tDIVIDE Expression
   75           | Expression tMULTIPLY Expression
   76           | tVAR
   77           | tINTNR
   78           | Function
   79           | tPO tSUBTRACT tINTNR tPC
   80           | tPO Expression tPC

   81 $@16: %empty

   82 Function: tVAR tPO $@16 Params tPC


Terminals, with rules where they appear

$end (0) 0
error (256)
tINT (258) 37
tACO (259) 12 19
tACC (260) 12 19
tCONST (261) 38
tADD (262) 72
tSUBTRACT (263) 67 73 79
tDIVIDE (264) 74
tMULTIPLY (265) 75
tEQUAL (266) 34 36 66 67
tPLUSPLUS (267) 58 68
tMINUSMINUS (268) 63 69
tIF (269) 43
tELSE (270) 44
tCHECKEQ (271) 46
tPO (272) 2 4 39 43 53 58 63 79 80 82
tPC (273) 2 4 39 43 53 58 63 79 80 82
tTAB (274)
tVIRGULE (275) 8 33 34
tDOLLAR (276)
tFINSTR (277) 4 18 30 39 58 63 66 67 68 69 70 71
tINTNR (278) 34 36 77 79
tWHILE (279) 53
tPRINTF (280) 39
tMAIN (281) 2
tVAR (282) 4 10 11 18 33 34 35 36 39 58 63 66 67 68 69 70 71 76 82
tFOR (283) 58 63
tSTRING (284)
tCHECKHIGHER (285) 48
tLESS (286) 47
tLESSEQUAL (287) 49
tMOREEQUAL (288) 50
tMINUSEQUAL (289) 70
tPLUSEQUAL (290) 71
tRETURN (291) 18


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Main (38)
    on left: 2, on right: 0
$@1 (39)
    on left: 1, on right: 2
DeclFunction (40)
    on left: 4 5, on right: 2
$@2 (41)
    on left: 3, on right: 4
Params (42)
    on left: 6 7, on right: 4 82
NextParam (43)
    on left: 8 9, on right: 6
Param (44)
    on left: 10 11, on right: 6 8
FuncBody (45)
    on left: 12, on right: 4
FuncInstrs (46)
    on left: 13 14, on right: 15 16
FuncInstr (47)
    on left: 15 16 17, on right: 12 15
RetVal (48)
    on left: 18, on right: 14 29
Body (49)
    on left: 19, on right: 2 43 44 53 58 63
Instruction (50)
    on left: 20 21 22, on right: 19 20
Instructions (51)
    on left: 23 24 25 26 27 28 29, on right: 13 20 21
Declaration (52)
    on left: 30, on right: 27 64
Declarations (53)
    on left: 31 32, on right: 30 31
Multideclaration (54)
    on left: 33 34, on right: 31
Lastdeclaration (55)
    on left: 35 36, on right: 32
vartype (56)
    on left: 37 38, on right: 4 10 30
Print (57)
    on left: 39, on right: 26
If (58)
    on left: 43, on right: 28
$@3 (59)
    on left: 40, on right: 43
$@4 (60)
    on left: 41, on right: 43
$@5 (61)
    on left: 42, on right: 43
Else (62)
    on left: 44 45, on right: 43
Condition (63)
    on left: 46 47 48 49 50, on right: 43 53 58 63
While (64)
    on left: 53, on right: 25
$@6 (65)
    on left: 51, on right: 53
$@7 (66)
    on left: 52, on right: 53
For (67)
    on left: 58 63, on right: 24
$@8 (68)
    on left: 54, on right: 58
$@9 (69)
    on left: 55, on right: 58
$@10 (70)
    on left: 56, on right: 58
$@11 (71)
    on left: 57, on right: 58
$@12 (72)
    on left: 59, on right: 63
$@13 (73)
    on left: 60, on right: 63
$@14 (74)
    on left: 61, on right: 63
$@15 (75)
    on left: 62, on right: 63
DeclCalc (76)
    on left: 64 65, on right: 58 63
Calcul (77)
    on left: 66 67 68 69 70 71, on right: 23 65
Expression (78)
    on left: 72 73 74 75 76 77 78 79 80, on right: 46 47 48 49 50 66
    67 70 71 72 73 74 75 80
Function (79)
    on left: 82, on right: 78
$@16 (80)
    on left: 81, on right: 82


State 0

    0 $accept: . Main $end

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2

    $default  reduce using rule 5 (DeclFunction)

    Main          go to state 3
    DeclFunction  go to state 4
    vartype       go to state 5


State 1

   37 vartype: tINT .

    $default  reduce using rule 37 (vartype)


State 2

   38 vartype: tCONST .

    $default  reduce using rule 38 (vartype)


State 3

    0 $accept: Main . $end

    $end  shift, and go to state 6


State 4

    2 Main: DeclFunction . tMAIN $@1 tPO tPC Body

    tMAIN  shift, and go to state 7


State 5

    4 DeclFunction: vartype . tVAR $@2 tPO Params tPC FuncBody tFINSTR

    tVAR  shift, and go to state 8


State 6

    0 $accept: Main $end .

    $default  accept


State 7

    2 Main: DeclFunction tMAIN . $@1 tPO tPC Body

    $default  reduce using rule 1 ($@1)

    $@1  go to state 9


State 8

    4 DeclFunction: vartype tVAR . $@2 tPO Params tPC FuncBody tFINSTR

    $default  reduce using rule 3 ($@2)

    $@2  go to state 10


State 9

    2 Main: DeclFunction tMAIN $@1 . tPO tPC Body

    tPO  shift, and go to state 11


State 10

    4 DeclFunction: vartype tVAR $@2 . tPO Params tPC FuncBody tFINSTR

    tPO  shift, and go to state 12


State 11

    2 Main: DeclFunction tMAIN $@1 tPO . tPC Body

    tPC  shift, and go to state 13


State 12

    4 DeclFunction: vartype tVAR $@2 tPO . Params tPC FuncBody tFINSTR

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2
    tVAR    shift, and go to state 14

    $default  reduce using rule 7 (Params)

    Params   go to state 15
    Param    go to state 16
    vartype  go to state 17


State 13

    2 Main: DeclFunction tMAIN $@1 tPO tPC . Body

    tACO  shift, and go to state 18

    Body  go to state 19


State 14

   11 Param: tVAR .

    $default  reduce using rule 11 (Param)


State 15

    4 DeclFunction: vartype tVAR $@2 tPO Params . tPC FuncBody tFINSTR

    tPC  shift, and go to state 20


State 16

    6 Params: Param . NextParam

    tVIRGULE  shift, and go to state 21

    $default  reduce using rule 9 (NextParam)

    NextParam  go to state 22


State 17

   10 Param: vartype . tVAR

    tVAR  shift, and go to state 23


State 18

   19 Body: tACO . Instruction tACC

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 24
    tWHILE   shift, and go to state 25
    tPRINTF  shift, and go to state 26
    tVAR     shift, and go to state 27
    tFOR     shift, and go to state 28
    tRETURN  shift, and go to state 29

    $default  reduce using rule 22 (Instruction)

    RetVal        go to state 30
    Instruction   go to state 31
    Instructions  go to state 32
    Declaration   go to state 33
    vartype       go to state 34
    Print         go to state 35
    If            go to state 36
    While         go to state 37
    For           go to state 38
    Calcul        go to state 39


State 19

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body .

    $default  reduce using rule 2 (Main)


State 20

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC . FuncBody tFINSTR

    tACO  shift, and go to state 40

    FuncBody  go to state 41


State 21

    8 NextParam: tVIRGULE . Param

    tINT    shift, and go to state 1
    tCONST  shift, and go to state 2
    tVAR    shift, and go to state 14

    Param    go to state 42
    vartype  go to state 17


State 22

    6 Params: Param NextParam .

    $default  reduce using rule 6 (Params)


State 23

   10 Param: vartype tVAR .

    $default  reduce using rule 10 (Param)


State 24

   43 If: tIF . $@3 tPO Condition tPC $@4 Body $@5 Else

    $default  reduce using rule 40 ($@3)

    $@3  go to state 43


State 25

   53 While: tWHILE . $@6 tPO Condition tPC $@7 Body

    $default  reduce using rule 51 ($@6)

    $@6  go to state 44


State 26

   39 Print: tPRINTF . tPO tVAR tPC tFINSTR

    tPO  shift, and go to state 45


State 27

   66 Calcul: tVAR . tEQUAL Expression tFINSTR
   67       | tVAR . tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR . tPLUSPLUS tFINSTR
   69       | tVAR . tMINUSMINUS tFINSTR
   70       | tVAR . tMINUSEQUAL Expression tFINSTR
   71       | tVAR . tPLUSEQUAL Expression tFINSTR

    tEQUAL       shift, and go to state 46
    tPLUSPLUS    shift, and go to state 47
    tMINUSMINUS  shift, and go to state 48
    tMINUSEQUAL  shift, and go to state 49
    tPLUSEQUAL   shift, and go to state 50


State 28

   58 For: tFOR . tPO $@8 DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body
   63    | tFOR . tPO $@12 DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

    tPO  shift, and go to state 51


State 29

   18 RetVal: tRETURN . tVAR tFINSTR

    tVAR  shift, and go to state 52


State 30

   29 Instructions: RetVal .

    $default  reduce using rule 29 (Instructions)


State 31

   19 Body: tACO Instruction . tACC

    tACC  shift, and go to state 53


State 32

   20 Instruction: Instructions . Instruction
   21            | Instructions .

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 24
    tWHILE   shift, and go to state 25
    tPRINTF  shift, and go to state 26
    tVAR     shift, and go to state 27
    tFOR     shift, and go to state 28
    tRETURN  shift, and go to state 29

    tACC      reduce using rule 21 (Instruction)
    tACC      [reduce using rule 22 (Instruction)]
    $default  reduce using rule 21 (Instruction)

    RetVal        go to state 30
    Instruction   go to state 54
    Instructions  go to state 32
    Declaration   go to state 33
    vartype       go to state 34
    Print         go to state 35
    If            go to state 36
    While         go to state 37
    For           go to state 38
    Calcul        go to state 39


State 33

   27 Instructions: Declaration .

    $default  reduce using rule 27 (Instructions)


State 34

   30 Declaration: vartype . Declarations tFINSTR

    tVAR  shift, and go to state 55

    Declarations      go to state 56
    Multideclaration  go to state 57
    Lastdeclaration   go to state 58


State 35

   26 Instructions: Print .

    $default  reduce using rule 26 (Instructions)


State 36

   28 Instructions: If .

    $default  reduce using rule 28 (Instructions)


State 37

   25 Instructions: While .

    $default  reduce using rule 25 (Instructions)


State 38

   24 Instructions: For .

    $default  reduce using rule 24 (Instructions)


State 39

   23 Instructions: Calcul .

    $default  reduce using rule 23 (Instructions)


State 40

   12 FuncBody: tACO . FuncInstr tACC

    tINT     shift, and go to state 1
    tCONST   shift, and go to state 2
    tIF      shift, and go to state 24
    tWHILE   shift, and go to state 25
    tPRINTF  shift, and go to state 26
    tVAR     shift, and go to state 27
    tFOR     shift, and go to state 28
    tRETURN  shift, and go to state 29

    $default  reduce using rule 17 (FuncInstr)

    FuncInstrs    go to state 59
    FuncInstr     go to state 60
    RetVal        go to state 61
    Instructions  go to state 62
    Declaration   go to state 33
    vartype       go to state 34
    Print         go to state 35
    If            go to state 36
    While         go to state 37
    For           go to state 38
    Calcul        go to state 39


State 41

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody . tFINSTR

    tFINSTR  shift, and go to state 63


State 42

    8 NextParam: tVIRGULE Param .

    $default  reduce using rule 8 (NextParam)


State 43

   43 If: tIF $@3 . tPO Condition tPC $@4 Body $@5 Else

    tPO  shift, and go to state 64


State 44

   53 While: tWHILE $@6 . tPO Condition tPC $@7 Body

    tPO  shift, and go to state 65


State 45

   39 Print: tPRINTF tPO . tVAR tPC tFINSTR

    tVAR  shift, and go to state 66


State 46

   66 Calcul: tVAR tEQUAL . Expression tFINSTR
   67       | tVAR tEQUAL . tSUBTRACT Expression tFINSTR

    tSUBTRACT  shift, and go to state 67
    tPO        shift, and go to state 68
    tINTNR     shift, and go to state 69
    tVAR       shift, and go to state 70

    Expression  go to state 71
    Function    go to state 72


State 47

   68 Calcul: tVAR tPLUSPLUS . tFINSTR

    tFINSTR  shift, and go to state 73


State 48

   69 Calcul: tVAR tMINUSMINUS . tFINSTR

    tFINSTR  shift, and go to state 74


State 49

   70 Calcul: tVAR tMINUSEQUAL . Expression tFINSTR
